Fix small horizontal scroll room

--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ iframe {
 }
 
 .row{
-    overflow: hidden;
+    margin:auto;
 }
 @media(max-width:560px) {
     .img-history {
